--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.3",
+    "gulp-imagemin": "^8.0.0",
     "gulp-libsquoosh": "^1.1.2",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-purgecss": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-squoosh": "^0.11.0",
     "gulp-terser": "^2.1.0",
+    "gulp-webp": "^4.0.1",
+    "imagemin-webp": "^8.0.0",
     "sass": "^1.58.3"
   }
 }
