--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "nombre-del-proyecto",
   "version": "1.0.0",
   "description": "Descripción del proyecto",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "server": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ip": "^1.1.8"
+    "fs": "^0.0.1-security",
+    "ip": "^1.1.8",
+    "path": "^0.12.7",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -28,6 +32,7 @@
     "gulp-squoosh": "^0.11.0",
     "gulp-terser": "^2.1.0",
     "gulp-webp": "^4.0.1",
+    "imagemin": "^8.0.1",
     "imagemin-webp": "^8.0.0",
     "sass": "^1.58.3"
   }
